tests/paczka1/small_fuzzy/48443357.err
Error in line 2: p9yk S948 37,0
Error in line 6: S666 S666 48,7
Error in line 4: V2k5ZM S769 45,3
